syntax = "proto2";

package msg;

message Configure
{
	required string cid = 1;
	optional int32 gpu = 2;
	optional bool enablesleep = 3;
	optional bool enablefight = 4;
	optional bool enablehelmet = 5;
	optional bool enablephone = 6;
	optional bool enableattendancein = 7;
	optional bool enableattendanceout = 8;
	optional float similar = 9;
}

message AlgorithmRequest
{
	repeated Configure configures = 1;
}

message AlgorithmResponse
{
	required int32 result = 1;
	repeated Configure configures = 2;
}

message Algorithm
{
	enum Command
	{
		CONFIGURE_REQ = 1;
		CONFIGURE_REP = 2;
		QUERY_REQ = 3;
		QUERY_REP = 4;
	}
	
	required Command command = 1;
	optional AlgorithmRequest algorithmrequest = 2;
	optional AlgorithmResponse algorithmresponse = 3;
}